<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Font Example</string>
	
	<string name="txt_no_style">A FontTextView without style</string>
	<string name="txt_style_in_layout_xml">Applying a style in the layout XML</string>
	<string name="txt_font_in_layout_xml">Applying a font in the layout XML</string>
	<string name="txt_style_bodoni">A FontTextView with style Bodoni</string>
	<string name="txt_style_bodoni_bold">A FontTextView with style Bodoni.Bold</string>
	<string name="txt_style_bodoni_italic">A FontTextView with style Bodoni.Italic</string>
	<string name="txt_italics"><i>Italics</i> when no <i>italic</i> font is present!</string>
	<string name="txt_bold_italics">Then what about <b><i>Bold-Italic</i></b>?</string>

</resources>


