<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res/com.innovattic.example.fonts"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:gravity="center_horizontal"
	android:layout_gravity="center_vertical"
	tools:context=".MainActivity" >
	
	<com.innovattic.view.FontTextView style="@style/Default"
		android:text="@string/txt_no_style" />
	
	<com.innovattic.view.FontTextView style="@style/Default"
		android:textStyle="bold|italic"
		android:text="@string/txt_style_in_layout_xml" />
	
	<com.innovattic.view.FontTextView style="@style/Default"
		app:font="bodoni"
		android:text="@string/txt_font_in_layout_xml" />
	
	<com.innovattic.view.FontTextView style="@style/Bodoni"
		android:text="@string/txt_style_bodoni" />
	
	<com.innovattic.view.FontTextView style="@style/Bodoni.Bold"
		android:text="@string/txt_style_bodoni_bold" />
	
	<com.innovattic.view.FontTextView style="@style/Bodoni.Italic"
		android:text="@string/txt_style_bodoni_italic" />
	
	<com.innovattic.view.FontTextView style="@style/Bodoni"
		android:text="@string/txt_italics" />
	
	<com.innovattic.view.FontTextView style="@style/Bodoni"
		android:text="@string/txt_bold_italics" />
	
</LinearLayout>